# wet-sensor

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  cap_soil.c  gzip_assets.py  main.c  rgb_led.c  soil_control.c  webserver.c
main/data/: page.html  script.js  style.css
main/include/: cap_soil.h  rgb_led.h  soil_control.h
